tests/snapshots/parser__reassign__bare_identifier_still_works.snap
---
source: tests/parser.rs
expression: "parse(\"x\")"
---
Ok(
    [
        Expr(
            Identifier(
                "x",
                Span {
                    start: 0,
                    end: 1,
                },
            ),
        ),
    ],
)
