tests/snapshots/parser__reassign__call_still_works.snap
---
source: tests/parser.rs
expression: "parse(\"x()\")"
---
Ok(
    [
        Expr(
            Call {
                callee: Identifier(
                    "x",
                    Span {
                        start: 0,
                        end: 1,
                    },
                ),
                args: [],
                span: Span {
                    start: 0,
                    end: 3,
                },
            },
        ),
    ],
)
