tests/snapshots/parser__reassign__reassign_expression.snap
---
source: tests/parser.rs
expression: "parse(\"x = 1 + 2\")"
---
Ok(
    [
        Reassign {
            name: "x",
            value: Binary {
                op: Add,
                lhs: Int(
                    1,
                    Span {
                        start: 4,
                        end: 5,
                    },
                ),
                rhs: Int(
                    2,
                    Span {
                        start: 8,
                        end: 9,
                    },
                ),
                span: Span {
                    start: 4,
                    end: 9,
                },
            },
            span: Span {
                start: 0,
                end: 9,
            },
        },
    ],
)
