tests/snapshots/parser__reassign__reassign_missing_value.snap
---
source: tests/parser.rs
expression: "parse(\"x =\")"
---
Err(
    ParseError {
        message: "expected expression after `=`: unexpected end of input",
        span: Span {
            start: 3,
            end: 3,
        },
    },
)
