tests/snapshots/parser__reassign__reassign_string.snap
---
source: tests/parser.rs
expression: "parse(r#\"x = \"hello\"\"#)"
---
Ok(
    [
        Reassign {
            name: "x",
            value: String(
                "hello",
                Span {
                    start: 4,
                    end: 11,
                },
            ),
            span: Span {
                start: 0,
                end: 11,
            },
        },
    ],
)
